ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  # tls:
  # - hosts:
  #   - myapp.com
  #     secretName: myapp-secret-tls
  rules:
  - host: labs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port:
              number: 8081
